--- a/src/components/header/css/HeaderTop.module.css
+++ b/src/components/header/css/HeaderTop.module.css
@@ -1,6 +1,8 @@
 .header__top{
     background-color: rgb(112, 42, 179);
     color: white;
+    position: sticky;
+    top: 0;
 }
 .header__wrap{
     max-width: 1200px;
