--- a/src/components/UI/css/Cards.module.css
+++ b/src/components/UI/css/Cards.module.css
@@ -1,5 +1,6 @@
 .cards{
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    padding: 45px;
+    border-radius: 15px;
+    padding: 1.5rem;
+    background-color: white;
 }
